--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
         "react-dom": "^18.2.0",
         "sass": "^1.56.1",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.13"
     }
 }
